Added link click through on images and text posts

--- a/css/repost.css
+++ b/css/repost.css
@@ -173,6 +173,7 @@
     background-color:#000;
     opacity:0.8;
     z-index:9000;
+		pointer-events: none;
     position: absolute;
     top: 0px;
     left: 0px;
