--- a/css/repost.css
+++ b/css/repost.css
@@ -183,6 +183,7 @@
 #repost div.divtable .post .postmask img.downvote {
     cursor: pointer;
     position: absolute;
+		pointer-events: auto;
     bottom: 5px;
     right: 7px;
     z-index: 999;
@@ -192,6 +193,7 @@
 #repost div.divtable .post .postmask img.upvote {
     cursor: pointer;
     position: absolute;
+		pointer-events: auto;
     bottom: 5px;
     right: 30px;
     z-index: 999;
