--- a/css/repost.css
+++ b/css/repost.css
@@ -175,9 +175,9 @@
     z-index:9000;
 		pointer-events: none;
     position: absolute;
-    top: 0px;
+    bottom: 0px;
     left: 0px;
-    height: 100%;
+    height: 50%;
     width: 100%;
 }
 #repost div.divtable .post .postmask img.downvote {
